Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20316

Display text "disappears" in QTableView when using a style sheet

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13.0 Alpha 1
    • 4.7.2
    • Widgets: Itemviews
    • None
    • 2b177314139b830ca7e2d5bc414131b0dc9fd5b9

      The display text of the first column in a QTableView, which is configured by a style sheet, "disappears", if the width of the control is changed at such the size, that only the first column is visible.

      Procedure:
      1. Open the attached form file "ParameterDataView.ui" with the Qt Designer
      2. Start the Preview of the form
      3. Reduce the width of the form like shown in the attached "ParameterDataView.jpg"

        1. ParameterDataView.JPG
          61 kB
          martina Schell
        2. ParameterDataView.ui
          12 kB
          martina Schell
        3. QT-BUG-20316_Test_Application.tar.gz
          2 kB
          Holger Ihrig
        For Gerrit Dashboard: QTBUG-20316
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            martina schell martina Schell
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes